--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -76,7 +76,7 @@
 	        <li class="treeview" >
 						<a href="#">
 							<i class="glyphicon glyphicon-tasks"></i> 
-							<span >例子菜单</span>
+							<span >学生管理</span>
 							<span  class="pull-right-container">
 								<i class="glyphicon glyphicon-chevron-left pull-right"></i>
 							</span>	
@@ -85,27 +85,22 @@
 		            <li >
 		            	<a href="../example/list.html"  target="ifr_content"  >
 		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >列表</span>
+		            		<span >班级列表</span>
 		            	</a>
 		            </li>
 		            <li >
 		            	<a href="../example/add.html" target="ifr_content" >
 		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >添加</span>
+		            		<span >学生列表</span>
 		            	</a>
 		            </li>
-		            <li >
-		            	<a href="../example/edit.html" target="ifr_content" >
-		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >修改</span>
-		            	</a>
-		            </li>
+
 		        </ul>
 					</li>
 					<li class="treeview" >
 						<a href="#">
 							<i class="glyphicon glyphicon-paperclip"></i> 
-							<span >作业菜单</span>
+							<span >考试菜单</span>
 							<span  class="pull-right-container">
 								<i class="glyphicon glyphicon-chevron-left pull-right"></i>
 							</span>	
@@ -114,66 +109,26 @@
 		            <li >
 		            	<a href="../jsp/teacher/list_tch.html"  target="ifr_content"  >
 		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >教师</span>
+		            		<span >考试维护</span>
 		            	</a>
 		            </li>
 		            <li >
 		            	<a href="../jsp/subj/list_subj.html" target="ifr_content" >
 		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >科目单元</span>
+		            		<span >学生成绩</span>
 		            	</a>
 		            </li>
-		            <li >
-		            	<a href="../jsp/subjunit/list_unit.html" target="ifr_content" >
-		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >知识章</span>
-		            	</a>
-		            </li>
-		            <li >
-		            	<a href="../jsp/subjsctn/list_sctn.html" target="ifr_content" >
-		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >知识节</span>
-		            	</a>
-		            </li>
+
 		        </ul>
 					</li>
-					<li class="treeview" >
-						<a href="#">
-							<i class="glyphicon glyphicon-stats"></i> 
-							<span >菜单三</span>
-							
-							<span  class="pull-right-container">
-								<i class="glyphicon glyphicon-chevron-left pull-right"></i>
-							</span>	
-						</a>
-						<ul class="treeview-menu">
-		            <li >
-		            	<a href="common/dashboard.html" target="ifr_content" >
-		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >子菜单一</span>
-		            	</a>
-		            </li>
-		            <li >
-		            	<a href="common/dashboard.html" target="ifr_content" >
-		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >子菜单二</span>
-		            	</a>
-		            </li>
-		            <li >
-		            	<a href="common/dashboard.html" target="ifr_content" >
-		            		<i class="glyphicon glyphicon-record"></i>
-		            		<span >子菜单三</span>
-		            	</a>
-		            </li>
-		        </ul>
-					</li>
+
 	      </ul>
 	    </section>
   	</aside>
   	
 	  <!-- Content Wrapper. Contains page content -->
 	  <div class="content-wrapper">
-	  	<iframe name="ifr_content" src="common/dashboard.html" style="width:100%;height:550px;border:0px solid;"  ></iframe>
+	  	<iframe name="ifr_content" th:src="@{/info}" style="width:100%;height:550px;border:0px solid;"  ></iframe>
 	  </div>
 	  
 	  <!-- /.content-wrapper -->
@@ -181,7 +136,7 @@
 	  	 <div class="pull-right hidden-xs">
 		      <b>Version</b> 2.4.0
 		    </div>
-		    <strong>Copyright &copy; 2018-2888 <a href="http://www.turingmeta.com">MetaMooc</a>.</strong> All rights
+		    <strong>Copyright &copy; 2018-2888 <a href="http://114.115.151.102">YuzoMooc</a>.</strong> All rights
 		    reserved.
 	  </footer>
 
