--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -83,7 +83,7 @@
 						</a>
 						<ul class="treeview-menu">
 		            <li >
-		            	<a href="../example/list.html"  target="ifr_content"  >
+		            	<a th:href="@{/ct/query}"  target="ifr_content"  >
 		            		<i class="glyphicon glyphicon-record"></i>
 		            		<span >班级列表</span>
 		            	</a>
