--- a/src/main/resources/templates/classteam/add_ct.html
+++ b/src/main/resources/templates/classteam/add_ct.html
@@ -72,7 +72,7 @@
 										</div>
 
 										<div class="form-group">
-											<label for="ctBeginDate" class="col-sm-2 control-label">预招生人数</label>
+											<label for="ctCount" class="col-sm-2 control-label">预招生人数</label>
 											<div class="col-sm-10 ">
 												<input type="number" min="1" step="1" class="form-control" id="ctCount" name="ctCount"   placeholder="请输入预招生人数"  >
 											</div>
