--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -89,7 +89,7 @@
 		            	</a>
 		            </li>
 		            <li >
-		            	<a href="../example/add.html" target="ifr_content" >
+		            	<a th:href="@{/stu/query}" target="ifr_content" >
 		            		<i class="glyphicon glyphicon-record"></i>
 		            		<span >学生列表</span>
 		            	</a>
