--- a/src/main/resources/templates/student/add_stu.html
+++ b/src/main/resources/templates/student/add_stu.html
@@ -63,6 +63,12 @@
 												<input type="text" class="form-control" id="stuName" name="stuName"  placeholder="请输入学生姓名" required="required">
 											</div>
 										</div>
+										<div class="form-group">
+											<label for="stuSn" class="col-sm-2 control-label">学生编号</label>
+											<div class="col-sm-10">
+												<input type="text" class="form-control" id="stuSn" name="stuSn"  placeholder="请输入学生编号" required="required">
+											</div>
+										</div>
 
 										<div class="form-group">
 											<label for="ctId" class="col-sm-2 control-label">所属班级</label>
