--- a/src/main/resources/templates/student/edit_stu.html
+++ b/src/main/resources/templates/student/edit_stu.html
@@ -44,7 +44,7 @@
 		<section class="content">
 			<div class="row">
 				<form class="form form-horizontal" method="post"    th:action="@{/stu/editSave}"   th:object="${stu}"  >
-
+					<input th:type="hidden" name="stuId" th:field="*{stuId}">
 					<!-- left column -->
 					<div class="col-md-8 col-md-offset-2">
 						<!-- general form elements -->
@@ -61,14 +61,20 @@
 								<div class="form-group">
 									<label for="stuName" class="col-sm-2 control-label">学生姓名</label>
 									<div class="col-sm-10">
-										<input type="text" class="form-control" id="stuName" name="stuName"  placeholder="请输入学生姓名" required="required">
+										<input type="text" class="form-control" id="stuName" name="stuName" th:field="*{stuName}"  placeholder="请输入学生姓名" required="required">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="stuSn" class="col-sm-2 control-label">学生编号</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="stuSn" name="stuSn" th:field="*{stuSn}" placeholder="请输入学生编号" required="required">
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label for="ctId" class="col-sm-2 control-label">所属班级</label>
 									<div class="col-sm-10">
-										<select class="form-control" id="ctId"  name="ctId" >
+										<select class="form-control" id="ctId"  name="ctId"  th:field="*{ctId}" >
 											<option  value = "" >请选择</option>
 											<option  th:value = "${ct.ctId }"   th:each="ct,i:${ctList}"   th:text="${ct.ctName }"   ></option>
 										</select>
@@ -78,10 +84,10 @@
 									<label for="stuSex" class="col-sm-2 control-label">学生性别</label>
 									<div class="col-sm-10 radio text-left">
 										<label>
-											<input type="radio"  value="0" name="stuSex"  checked >男
+											<input type="radio"  th:value="1"   th:field="*{stuSex}" th:checked="checked" name="stuSex" >男
 										</label>
 										<label>
-											<input type="radio"  value="1" name="stuSex" >女
+											<input type="radio"  th:value="0"  th:field="*{stuSex}" th:checked="checked" name="stuSex" >女
 										</label>
 									</div>
 								</div>
@@ -89,20 +95,20 @@
 								<div class="form-group">
 									<label for="stuBirth" class="col-sm-2 control-label">出生日期</label>
 									<div class="col-sm-10 ">
-										<input type="date" class="form-control" id="stuBirth" name="stuBirth"   placeholder="请输入出生日期"  >
+										<input type="date" class="form-control" id="stuBirth" name="stuBirth"  th:field="*{stuBirth}"  placeholder="请输入出生日期"  >
 									</div>
 								</div>
 
 								<div class="form-group">
 									<label for="stuInAge" class="col-sm-2 control-label">入学年龄</label>
 									<div class="col-sm-10 ">
-										<input type="number" min="1" step="1" class="form-control" id="stuInAge" name="stuInAge"   placeholder="请输入入学年龄"  >
+										<input type="number" min="1" step="1" class="form-control" id="stuInAge" name="stuInAge"  th:field="*{stuInAge}"  placeholder="请输入入学年龄"  >
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="stuWeight" class="col-sm-2 control-label">学生体重</label>
 									<div class="col-sm-10 ">
-										<input type="number" min="1" step="0.01" class="form-control" id="stuWeight" name="stuWeight"   placeholder="请输入学生体重"  >
+										<input type="number" min="1" step="0.01" class="form-control" id="stuWeight" name="stuWeight"  th:field="*{stuWeight}"  placeholder="请输入学生体重"  >
 									</div>
 								</div>
 
