--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -118,6 +118,18 @@
 		            		<span >学生成绩</span>
 		            	</a>
 		            </li>
+					<li >
+		            	<a th:href="@{xm/addXing}" target="ifr_content" >
+		            		<i class="glyphicon glyphicon-record"></i>
+		            		<span >姓</span>
+		            	</a>
+		            </li>
+				<li >
+		            	<a th:href="@{xm/addMing}" target="ifr_content" >
+		            		<i class="glyphicon glyphicon-record"></i>
+		            		<span >名</span>
+		            	</a>
+		            </li>
 
 		        </ul>
 					</li>
